[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/game/MonsterController.gd" type="Script" id=1]

[node name="MonsterController" type="Node2D"]
script = ExtResource( 1 )

[node name="MonsterWakeupTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CheckRemainingTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="MonsterWakeupTimer" to="." method="_on_MonsterWakeupTimer_timeout"]
[connection signal="timeout" from="CheckRemainingTimer" to="." method="_on_CheckRemainingTimer_timeout"]
